1) Added remote config. Now can specify number of text fields and the text within them. 2) Added the survey fragment.

--- a/Visit/app/build.gradle
+++ b/Visit/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "27.0.2"
     defaultConfig {
         applicationId "com.example.sonu_pc.visit"
-        minSdkVersion 16
-        targetSdkVersion 25
+        minSdkVersion 21
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -20,16 +21,42 @@ android {
 }
 
 dependencies {
+
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+
+    compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:support-v4:26.1.0'
     compile 'com.otaliastudios:cameraview:1.4.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:picasso-transformations:2.1.2'
+    compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
+
+    // Firestore
+    implementation 'com.google.firebase:firebase-firestore:11.6.2'
+
+    //Realtime database
+    implementation 'com.google.firebase:firebase-database:11.6.2'
+
+    // Storage
+    implementation 'com.google.firebase:firebase-storage:11.6.2'
+
+    // Authentication
+    implementation 'com.google.firebase:firebase-auth:11.6.2'
+    implementation 'com.firebaseui:firebase-ui-auth:3.1.2'
+
+    // Remote Config
+    implementation 'com.google.firebase:firebase-config:11.6.2'
+
+    // Gson
+    compile 'com.google.code.gson:gson:2.8.2'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
