--- a/Visit/app/src/main/AndroidManifest.xml
+++ b/Visit/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.PrinterActivity"
             android:label="@string/app_title">
             <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
@@ -36,7 +36,7 @@
             android:label="@string/app_title" />
         <activity android:name=".activities.SignUpActivity" />
         <activity android:name=".activities.SettingsActivity" />
-        <activity android:name=".activities.MasterActivity"></activity>
+        <activity android:name=".activities.MasterActivity" />
         <activity android:name=".activities.QrScanner" />
         <activity android:name=".activities.SetupActivity">
             <intent-filter>
@@ -45,7 +45,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SpeechRecognitionHelperActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
+        <activity
+            android:name=".SpeechRecognitionHelperActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".activities.StageActivity"></activity>
     </application>
 
 </manifest>
