--- a/Visit/app/src/main/AndroidManifest.xml
+++ b/Visit/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.sonu_pc.visit">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -16,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.PrinterActivity"
+            android:name=".activities.printer.PrinterActivity"
             android:label="@string/app_title">
             <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
@@ -48,7 +49,13 @@
         <activity
             android:name=".SpeechRecognitionHelperActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <activity android:name=".activities.StageActivity"></activity>
+        <activity android:name=".activities.StageActivity" />
+        <activity android:name=".activities.voiceRecognitionTest" />
+
+        <service
+            android:name=".TextToSpeechService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
