--- a/Visit/app/build.gradle
+++ b/Visit/app/build.gradle
@@ -32,7 +32,7 @@ android {
 dependencies {
 
 
-
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -70,6 +70,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-crash:11.6.2'
     // Gson
     compile 'com.google.code.gson:gson:2.8.2'
+
+    // SortedRecyclerView
+    implementation 'com.github.wrdlbrnft:sorted-list-adapter:0.2.0.1'
     testCompile 'junit:junit:4.12'
 }
 
