1) Changed button style. 2) Changed position of cancel button in the fragments to top-right. 3) Added Image compression to IdScanFragment. (200*200) 4) Added activity for workflow data and logo refresh

--- a/Visit/app/src/main/AndroidManifest.xml
+++ b/Visit/app/src/main/AndroidManifest.xml
@@ -80,7 +80,8 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activities.SignOutActivity"></activity>
+        <activity android:name=".activities.SignOutActivity" />
+        <activity android:name=".activities.DataRefreshActivity"></activity>
     </application>
 
 </manifest>
