--- a/Visit/app/build.gradle
+++ b/Visit/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "27.0.2"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.example.sonu_pc.visit"
         minSdkVersion 21
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 27
+        versionCode 3
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -32,47 +32,54 @@ android {
 dependencies {
 
 
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
 
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.otaliastudios:cameraview:1.4.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'jp.wasabeef:picasso-transformations:2.1.2'
-    compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.otaliastudios:cameraview:1.4.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'jp.wasabeef:picasso-transformations:2.1.2'
+    implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
 
     // Analytics
-    implementation 'com.google.firebase:firebase-core:11.6.2'
+    implementation 'com.google.firebase:firebase-core:15.0.2'
     // Firestore
-    implementation 'com.google.firebase:firebase-firestore:11.6.2'
+    implementation 'com.google.firebase:firebase-firestore:16.0.0'
 
     //Realtime database
-    implementation 'com.google.firebase:firebase-database:11.6.2'
+    implementation 'com.google.firebase:firebase-database:15.0.0'
 
     // Storage
-    implementation 'com.google.firebase:firebase-storage:11.6.2'
+    implementation 'com.google.firebase:firebase-storage:15.0.2'
 
     // Authentication
-    implementation 'com.google.firebase:firebase-auth:11.6.2'
-    implementation 'com.firebaseui:firebase-ui-auth:3.1.2'
+    implementation 'com.google.firebase:firebase-auth:15.1.0'
+    implementation 'com.firebaseui:firebase-ui-auth:3.3.1'
 
     // Remote Config
-    implementation 'com.google.firebase:firebase-config:11.6.2'
+    implementation 'com.google.firebase:firebase-config:15.0.2'
 
     // Crash Reporting
-    implementation 'com.google.firebase:firebase-crash:11.6.2'
+    implementation 'com.google.firebase:firebase-crash:15.0.2'
     // Gson
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
 
     // SortedRecyclerView
     implementation 'com.github.wrdlbrnft:sorted-list-adapter:0.2.0.1'
+
+    //    Discrete Scroll View
+    implementation 'com.yarolegovich:discrete-scrollview:1.4.7'
+
+//    smiley rating
+    implementation 'com.github.sujithkanna:smileyrating:1.6.8'
+
     testCompile 'junit:junit:4.12'
 }
 
